# hampshire

./: Dockerfile  cabal.project  docker-compose.yml
hampshire/: LICENSE  hampshire.cabal
hampshire-db/: hampshire-db.cabal
hampshire/app/: Main.hs
hampshire/lib/Hampshire/: Prelude.hs
hampshire/migrations/: V1__initial_setup.sql
