cabal-version:      2.4
name:               hampshire
version:            0.1.0.0
synopsis:           Fight

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Thales Maciel
maintainer:         contato@thalesmaciel.com

-- A copyright notice.
-- copyright:
category:           Web
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        Hampshire.Prelude

    -- Modules included in this library but not exported.
    other-modules:

    -- LANGUAGE extensions used by modules in this package.
    other-extensions: ApplicativeDo, Arrows, BangPatterns, BinaryLiterals, BlockArguments, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, HexFloatLiterals, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, NumericUnderscores, OverloadedStrings, PatternGuards, PatternSynonyms, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, StrictData, TemplateHaskell, TupleSections, TypeApplications, TypeFamilies, TypeOperators, UnboxedTuples
    build-depends: rerebase

    hs-source-dirs:   lib
    default-language: Haskell2010

executable hampshire
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:    

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        time^>=1.12.2,
        aeson,
        rerebase,
        wai,
        warp,
        http-types,
        blaze-builder,
        hasql,
        hasql-migration,
        hasql-transaction,
        hasql-th,
        hasql-pool,
        hampshire-db,
        hampshire
    
    ghc-options: -threaded

    hs-source-dirs:   app
    default-language: Haskell2010
